<resources>
    <string name="app_name">Globalcorp Taskmanager</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="start_to_mission_button_text">Missions</string>
    <string name="start_to_kittens_button_text">Depression ( cats )</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_to_register">Click me to register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">Login failed</string>
    <string name="signin_with_google">Sign in with: </string>


    <string name="web_client_id">268340079960-oa9l1cid2qo7t8chgj8ns6di3m7tc04l.apps.googleusercontent.com</string>
    <string name="login_title">Task Manager</string>

    <string name="missions_buttonsBar_option1_button_text">Available</string>
    <string name="missions_buttonsBar_option2_button_text">Accepted</string>
    <string name="missions_buttonsBar_option3_button_text">Finished</string>

    <string name="selected_missions_accept_button">Accept mission!</string>
    <string name="selected_missions_google_maps_button">Google maps!</string>
    <string name="selected_missions_timeReport_button">Time report!</string>

    <string name="start_to_admin_button_text">Secret admin page</string>
    <string name="admin_to_createMission_button_text">Create a new mission</string>
    <string name="admin_to_assignMission_button_text">Assign Mission to user</string>

    <string name="create_new_mission_title_input_text">Title</string>
    <string name="create_new_mission_description_input_text">Description</string>
    <string name="create_new_mission_location_input_text">Address</string>
    <string name="create_new_mission_type_input_text">Type</string>

    <string name="create_new_mission_timeStart_button_text">Mission begins</string>
    <string name="create_new_mission_timeStop_button_text">Mission ends</string>
    <string name="create_new_mission_createMission_button_text">Create Mission</string>


</resources>