<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="xmlViewModel"
            type="com.globalcorp.taskman.MissionsViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#000000"
        android:orientation="horizontal"
        tools:context=".MainActivity">

        <Button
            android:id="@+id/missions_buttonsBar_option1_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_free_mission"
            android:text="@string/missions_buttonsBar_option1_button_text"
            android:textColor="#FFFFFFFF"
            android:tint="@color/missions_free_icon"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/missions_buttonsBar_option2_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_accepted_mission"
            android:text="@string/missions_buttonsBar_option2_button_text"
            android:textColor="#FFFFFFFF"
            android:tint="@color/missions_accepted_icon"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/missions_buttonsBar_option3_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_finished_mission"
            android:text="@string/missions_buttonsBar_option3_button_text"
            android:textColor="#FFFFFFFF"
            android:tint="@color/missions_finished_icon"
            android:textAllCaps="false"/>


    </LinearLayout>
</layout>