<?xml version="1.0" encoding="utf-8"?>


<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="StartFragment"
            type="com.globalcorp.taskman.StartFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".StartFragment">


        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:titleTextColor="@android:color/white" />

        </com.google.android.material.appbar.AppBarLayout>


        <Button
            android:id="@+id/startToMissionButton"
            android:layout_width="152dp"
            android:layout_height="54dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="150dp"
            android:text="@string/start_to_mission_button_text"
            app:layout_constraintBottom_toTopOf="@+id/startToKittensFragmentButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/startToKittensFragmentButton"
            android:layout_width="152dp"
            android:layout_height="54dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="72dp"
            android:text="@string/start_to_kittens_button_text"
            app:layout_constraintStart_toStartOf="@+id/startToMissionButton"
            app:layout_constraintTop_toBottomOf="@+id/startToMissionButton" />

        <Button
            android:id="@+id/startToAdminFragmentButton"
            android:layout_width="152dp"
            android:layout_height="54dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="216dp"
            android:text="@string/start_to_admin_button_text"
            app:layout_constraintStart_toStartOf="@+id/startToKittensFragmentButton"
            app:layout_constraintTop_toBottomOf="@+id/startToKittensFragmentButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>